syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc Connect (ConnectionRequest) returns (ConnectionReply);
  rpc SendRectangle (EmptyMessage) returns (stream RectangleReply);
}

// Запрос на подключение.
message ConnectionRequest {
  int32 Id = 1;
}

// Ответ при попытке подключения.
message ConnectionReply {
  int32 Code = 1;
}

message EmptyMessage{

}

message RectangleReply {
	int32 Id = 1;
	int32 X = 2;
	int32 Y = 3;
	int32 Height = 4;
	int32 Width = 5;
}
